<resources>

    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register_carer">Register Carer</string>
    <string name="action_add_resident">Add resident</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_nurse_panel">Carer panel</string>
    <string name="field_is_required">This field is required</string>
    <string name="register_successful">Carer register successful</string>
    <string name="register_resident_successful">Resident add successful</string>
    <string name="register_error">Carer register unsuccessful</string>
    <string name="adding_error">Adding unsuccessful</string>
    <string name="send_message_unsuccessful">Send message unsuccessful</string>
    <string name="send_message_successful">Send message successful</string>
    <string name="carer_is_current_adding">Registering a carer...</string>
    <string name="resident_is_current_adding">Adding resident...</string>
    <string name="message_is_current_sending">Sending message...</string>
    <string name="no_carer_selected">Not selected carer</string>
    <string name="no_resident_selected">Not selected resident</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit_carer">Edit profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login_activityl">Sign in</string>
    <string name="residents_list_tab">Residents</string>
    <string name="carers_list_tab">Carers</string>
    <string name="messages_tab">Messages</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_resident">Add Resident</string>
    <string name="title_activity_carer_register">Register Carer</string>
    <string name="prompt_dat_of_adoption">Date of adoption</string>
    <string name="prompt_birth_date">Birth sendDate</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_city">City</string>
    <string name="select_image">Select photo</string>
    <string name="switch_gallery">Gallery</string>
    <string name="switch_camera">Camera</string>


    <string name="prompt_carer_username">Username(Email)</string>
    <string name="prompt_carer_password">Password</string>
    <string name="prompt_carer_fullname">Full Name</string>
    <string name="prompt_carer_phonenumber">Phone Number</string>
    <string name="title_activity_resident">Resident Overview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="label_resident_name">Resident Name</string>
    <string name="label_resident_address">Address</string>
    <string name="label_resident_tasks">Tasks</string>
    <string name="label_resident_no_tasks">No tasks</string>



    <string name="drawer_label_overview">Overview</string>
    <string name="drawer_label_medicines">Medicines</string>
    <string name="drawer_label_family">Family</string>

    <string name="tasks_empty">No tasks</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="prompt_task_title">Title</string>
    <string name="prompt_task_description">Description</string>
    <string name="prompt_task_date">Date</string>
    <string name="prompt_task_carer">Carer</string>
    <string name="prompt_task_resident">Resident</string>
    <string name="title_add_task">NEW TASK</string>

    <string name="carer">Carer</string>
    <string name="resident">Resident</string>

    <string name="from">From</string>
    <string name="message_empty">Messsage list is empty</string>

    <string name="new_carer_message">New Message</string>
    <string name="new_carer_message_title">Title</string>
    <string name="new_carer_message_target">Carer</string>
    <string name="new_carer_message_content">Contents</string>
    <string name="new_carer_message_send">Send</string>

    <string name="empty_family_list">Family list empty</string>


    <string name="medicine_name">Medicine name</string>
    <string name="medicine_start_date">Start date</string>
    <string name="medicine_end_date">End date</string>
    <string name="medicine_dose">Dose</string>
    <string name="medicine_to">to</string>
    <string name="medicine_empty">Medicine list is empty</string>
    <string name="add_medicine">Add medicine</string>

    <string name="error">Error</string>
    <string name="adding_task">Adding task...</string>
    <string name="adding_task_unsuccessful">Adding task unsuccessful</string>
    <string name="adding_task_successful">Adding task successful</string>

    <string name="adding_medicine">Adding medicine...</string>
    <string name="adding_medicine_unsuccessful">Adding medicine unsuccessful</string>
    <string name="adding_medicine_successful">Adding medicine successful</string>


    <string name="internet_not_available">Internet not available</string>
    <string name="ok">OK</string>

    <string name="at_least_one_small_letter">At least one small letter</string>
    <string name="at_least_one_capital_letter">At least one capital letter</string>
    <string name="at_least_one_number">At least one number</string>
    <string name="at_least_one_special_character">At least one special character</string>
    <string name="be_at_least_eight_characters">Be at least eight characters</string>

    <string name="add_family">Add family</string>
    <string name="add_family_username">Username</string>
    <string name="add_family_full_name">Full name</string>
    <string name="adding_family">Adding family</string>
    <string name="adding_family_unsuccessful">Adding unsuccessful</string>
    <string name="adding_family_successful">Adding successful</string>

    <string name="remove_question">Do you want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="confirm">Confirm</string>
    <string name="edit_profile">Edit profile</string>


    <string name="family">EduCareMobile Family</string>







</resources>
