<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name"
        android:textColor="@color/text_primary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_title"
        android:textColor="@color/text_additional"
        android:layout_marginTop="3dp"
        android:text="@string/medicine_start_date"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/item_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_start_date"
        android:textColor="@color/text_additional"
        android:text="@string/medicine_end_date"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/item_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_end_date"
        android:layout_marginTop="3dp"
        android:textColor="@color/text_additional"
        android:textSize="12sp"
        android:text="@string/medicine_dose"/>



    <ImageView
        android:id="@+id/item_divider"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@id/item_body"
        android:src="#dcdcdc"/>
</RelativeLayout>