<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/medicine_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:isScrollContainer="true"
    android:background="@drawable/rounded_layout"
    android:padding="@dimen/activity_padding" >



    <RelativeLayout
        android:id="@+id/medicine_scroll_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_layout"
        android:padding="@dimen/activity_padding" >


    <TextView
        android:id="@+id/add_medicine_title"
        android:text="@string/add_medicine"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_light_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText android:id="@+id/new_medicine_name"
        android:layout_below="@+id/add_medicine_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medicine_name"
        android:textColorHint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />



    <EditText android:id="@+id/medicine_start_date"
        android:layout_below="@+id/new_medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medicine_start_date"
        android:textColorHint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
        android:inputType="date"
        android:maxLines="1"
        android:focusable="false"
        android:singleLine="true" />

        <EditText android:id="@+id/medicine_end_date"
            android:layout_below="@+id/medicine_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicine_end_date"
            android:textColorHint="@color/cardview_light_background"
            android:textColor="@color/cardview_light_background"
            android:inputType="date"
            android:maxLines="1"
            android:focusable="false"
            android:singleLine="true" />


        <EditText android:id="@+id/medicine_dose"
            android:layout_below="@+id/medicine_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicine_dose"
            android:textColorHint="@color/cardview_light_background"
            android:textColor="@color/cardview_light_background"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />



    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/medicine_dose"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/colorPrimary"
                android:width="120dp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_toRightOf="@id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="@color/colorPrimary"
                android:width="120dp" />



        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>