<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/message_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:isScrollContainer="true"
    android:background="@drawable/rounded_layout"
    android:padding="@dimen/activity_padding" >



    <RelativeLayout
        android:id="@+id/message_scroll_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_layout"
        android:padding="@dimen/activity_padding" >


    <TextView
        android:id="@+id/new_carer_message"
        android:text="@string/new_carer_message"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cardview_light_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/new_carer_message_title"
        android:layout_below="@+id/new_carer_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_carer_message_title"
        android:textColorHint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true" />



    <EditText android:id="@+id/new_carer_message_contents"
        android:layout_below="@+id/new_carer_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_carer_message_content"
        android:textColorHint="@color/cardview_light_background"
        android:textColor="@color/cardview_light_background"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:singleLine="false" />



    <ExpandableListView
        android:id="@+id/lvExp"
        android:nestedScrollingEnabled="true"
        android:choiceMode="singleChoice"
        android:listSelector="@drawable/selector"
        android:childIndicator="@drawable/icon_plus"
        android:layout_below="@+id/new_carer_message_contents"
        android:layout_height="100dp"
        android:layout_width="wrap_content"/>



    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/lvExp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_carer_message_send"
                android:textColor="@color/colorPrimary"
                android:width="120dp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_toRightOf="@id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="@color/colorPrimary"
                android:width="120dp" />



        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>