<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hswie.educaremobile.resident.OverviewFragment">

    <LinearLayout
        android:id="@+id/contentLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/overviewResidentPhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="true"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/label_resident_name"
                android:textColor="@color/cardview_light_background"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/label_resident_address"
                android:textColor="@color/cardview_light_background"
                android:textSize="14sp" />
        </LinearLayout>



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

                
            <TextView
                android:id="@+id/notificationsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_resident_tasks"
                android:textColor="@color/cardview_dark_background"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_empty_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/notificationsTV"
                android:layout_marginTop="10dp"
                android:text="@string/label_resident_no_tasks"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14sp" />



            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/notificationsTV">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/tasksRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </android.support.v4.widget.SwipeRefreshLayout>



        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
